#2 Implementar o HTML da calculadora de IMC

--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <h2>Teste</h2>
+    <div class="container"> <!--INÍCIO CONTAINER-->
+        <div class="calc__container"> 
+            <form id="imc__form">
+<!--===========================FORMULÁRIOS DOS INPUTS==============================-->                
+                <div class="form__inputs">
+                    <div class="form__control">
+                        <label for="height">Altura:</label>
+                        <input type="text" name="height" id="height" placeholder="Exemplo: 1,75">
+                    </div>
+
+                    <div class="form__control">
+                        <label for="weight">Peso</label>
+                        <input type="text" name="weight" id="weight" placeholder="Exemplo: 72,5">
+                    </div>
+                </div>
+<!--===========================COONTROLE DAS AÇÕES==============================-->
+                <div class="action__control">
+                    <button id="calc__btn">Calcular</button>
+                    <button id="clear__btn">Limpar</button>
+                </div>
+            </form>
+        </div>
+        <div class="result__container">
+            <p id="imc__number">Seu IMC: <span></span></p>
+            <p id="imc__info">Situação atual: <span></span></p>
+            <h3>Configurar as classificações</h3>
+            <div id="imc__table">
+                <div class="table__header">
+                    <h4>IMC</h4>
+                    <h4>Classificação</h4>
+                    <h4>Obesidade</h4>
+                </div>
+            </div>
+            <button id="back__btn">Voltar</button>
+        </div>
+    </div> <!--FIM CONTAINER-->
 </body>
 </html>
