#3 Estilizar a calculadora no arquivo style.css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container"> <!--INÍCIO CONTAINER-->
-        <div class="calc__container"> 
+        <div id="calc__container"> 
             <form id="imc__form">
 <!--===========================FORMULÁRIOS DOS INPUTS==============================-->                
                 <div class="form__inputs">
@@ -34,7 +34,7 @@
                 </div>
             </form>
         </div>
-        <div class="result__container">
+        <div id="result__container" class="hide">
             <p id="imc__number">Seu IMC: <span></span></p>
             <p id="imc__info">Situação atual: <span></span></p>
             <h3>Configurar as classificações</h3>
@@ -44,6 +44,7 @@
                     <h4>Classificação</h4>
                     <h4>Obesidade</h4>
                 </div>
+               
             </div>
             <button id="back__btn">Voltar</button>
         </div>
