#4 Iniciar código JS, implementando a ligação das classes no arquivo HTML para o arquivo JS

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </form>
         </div>
-        <div id="result__container" class="hide">
+        <div id="result__container" >
             <p id="imc__number">Seu IMC: <span></span></p>
             <p id="imc__info">Situação atual: <span></span></p>
             <h3>Configurar as classificações</h3>
